smartforests/scss/overrides.scss
// 14px, expressed as rem
$small-font-size: $font-size-base * 0.7777777778;

:root {
  --bs-font-sans-serif: "MarrSans", "sans-serif";
  --cc-bg: #f9f9f9;
  --cc-btn-primary-bg: #026302;
}
@mixin body-text {
  font-size: 16px;
  font-weight: normal;

  @include media-breakpoint-up(md) {
    font-size: 18px;
  }
}

body {
  ::selection {
    background: $primary-hover-light;
  }

  @include body-text;

  display: flex;
  flex-direction: column;
  color: $dark;
  background: $body-bg;
}

.font-monospace {
  letter-spacing: 1px;
}

@mixin heading-large {
  font-weight: 400;
  line-height: 110%;
  font-size: 32px;

  @include media-breakpoint-up(md) {
    font-size: 64px;
  }
}

@mixin heading-medium {
  font-weight: 400;
  line-height: 140%;

  font-size: 18px;

  @include media-breakpoint-up(md) {
    font-size: 24px;
  }
}

@mixin heading-small {
  font-weight: bold;
  font-size: 18px;
  line-height: 125%;
}

@mixin microcopy {
  @extend .font-monospace;
  font-style: normal;
  font-size: $small-font-size;
  line-height: 18px;
}

.heading-large,
h1 {
  @include heading-large;
}

.heading-medium,
h2 {
  @include heading-medium;
}

.heading-small,
h3 {
  @include heading-small;
}

.microcopy,
h4 {
  @include microcopy;
}

.microcopy-small,
h4 {
  @include microcopy;
  @extend .small;
  text-transform: uppercase;
}

h3.microcopy-small {
  letter-spacing: 0;
}

.small {
  font-size: 12px !important;
}

a .card,
a.card {
  .card-overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    &:hover {
      background-color: transparentize($color: $dark-green, $amount: 0.9);
    }
  }
}

.card {
  overflow: hidden;
}

.turbo-progress-bar {
  background: $dark-green;
}

.dropdown-toggle.show {
  @extend .shadow-sm;
  background-color: $off-white;
}

.navbar {
  padding-bottom: 0;

  @include media-breakpoint-up(lg) {
    padding-bottom: $spacer * 0.5;
  }
}

// Remove this for the moment, but return as it makes this inaccessible.
.navbar-toggler:focus {
  box-shadow: none;
}

.nav-link {
  font-weight: bold;
  color: $secondary;

  &.active {
    color: $dark;
    border-bottom: 2px solid $primary;
  }
}

.nav-link:hover {
  text-decoration: underline;
}

.model-storypage .block-text {
  @extend .font-serif;
}

.modal-backdrop {
  mix-blend-mode: multiply;
}

@include media-breakpoint-down(lg) {
  .navbar-collapse {
    background-color: $white;
    height: 100vh;

    // Slight correction for the padding of the menu, which looks visually wrong.
    padding-top: 5px;

    // Override collapse animation to make hamburger menu open instantly on navbar.
    // See https://github.com/twbs/bootstrap/blob/359ed099e5b2f82bd602f2a6c45f43af8f2c87e8/scss/_transitions.scss
    &.collapsing {
      transition: none;
    }
  }
}

.metadata {
  font-style: normal;
  font-size: $small-font-size !important;
  line-height: $font-size-root;

  // This is an ugly workaround.
  // We want to preserve <h4> default styles to be the styles encapsulated in the class microcopy.
  // This is because Wagtail outputs these in general body text for a page without any classes attached.
  // However, we also want to be able to overwrite the look on the metadata sidebar, but keep the semantic <h4> tag to allow screenreaders a better change of getting it right.
  h4 {
    color: $dark-green;
    font-size: $small-font-size !important;
    font-family: $font-family-sans-serif !important;
    text-transform: none;
    letter-spacing: 0;
  }
}

.offcanvas-end {
  border-left: none;
  box-shadow: 0px 0px 20px 0px rgba($dark-green, 0.2);
}
.text-reset {
  @include body-text;
}

.accordion {
  border-top: 1px solid $light-grey;

  .accordion-item {
    border-bottom: 1px solid $light-grey;
  }
}

.content-copy > * + * {
  margin-top: map-get($map: $spacers, $key: 5);
}

#radioPlayerSeeker {
  $progress-color: $faded-green;
  $background-color: white;

  // Positioning
  position: absolute;
  bottom: 100%;
  left: 0;
  height: 6px;
  width: 100%;

  // Styles
  /* RESETS */
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;

  /* IE and EDGE */
  background-color: $background-color;
  color: $progress-color;

  /* WEBKIT BROWSERS - CHROME, OPERA AND SAFARI */
  &::-webkit-progress-bar {
    background-color: $background-color;
  }

  &::-webkit-progress-value {
    background-color: $progress-color;
  }

  /* MOZILLA FIREFOX */
  &::-moz-progress-bar {
    background-color: $progress-color;
  }

  // Interaction
  cursor: pointer;
  &:hover {
    height: 16px;
  }
  transition: all 0.3s;
}

html body .shadow-none.shadow-none {
  box-shadow: none !important;
}

// For long links
a {
  word-break: break-all;
}

.wagtail-userbar {
  bottom: 6em !important;
}

